Fix quality flaws